<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name"
        android:textAppearance="?textAppearanceHeadline5"
        android:textStyle="bold"
        app:fontFamily="@font/roboto_black_italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:text="@string/app_version"
        android:textAppearance="?textAppearanceHeadline6"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:text="@string/app_description"
        android:textAppearance="?attr/textAppearanceBody1"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/rate_app"
        android:textAppearance="?attr/textAppearanceHeadline6"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate_app_encouragement"
        android:textAppearance="?attr/textAppearanceBody1"
        />

    <com.gagan.agepredictor.utils.LabelLinkView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:text="@string/rate_on_playstore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:linkUrl="http://play.google.com/store/apps/details?id=com.gagan.trafficsignrecognition" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingTop="10dp"
        android:text="@string/privacy_policy_title"
        android:textAppearance="?attr/textAppearanceHeadline6"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy_encouragement"
        android:textAppearance="?attr/textAppearanceBody1"
        />


    <com.gagan.agepredictor.utils.LabelLinkView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:text="@string/read_privacy_policy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:linkUrl="https://github.com/gaganag50/Traffic-Sign-Recognition-Privacy-Policy/blob/main/index.md" />


</LinearLayout>