<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="6dp"
    app:cardMaxElevation="12dp"
    app:cardUseCompatPadding="true">


    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@android:color/white"
        android:foregroundGravity="center"
        android:gravity="center">


        <ImageView
            android:id="@+id/individual_face"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/description_individual_face"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_height="100dp"
            tools:layout_width="100dp"
            tools:src="@drawable/pic3" />

        <TextView
            android:id="@+id/face_title"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/detail_age"
            app:layout_constraintStart_toStartOf="@+id/detail_age"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="1" />

        <TextView
            android:id="@+id/detail_age"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/detail_gender"
            app:layout_constraintStart_toStartOf="@+id/detail_gender"
            app:layout_constraintTop_toBottomOf="@+id/face_title"
            tools:text="8-12" />

        <TextView
            android:id="@+id/detail_gender"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="0dp"
            android:layout_height="23dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/detail_emotion"
            app:layout_constraintStart_toStartOf="@+id/detail_emotion"
            app:layout_constraintTop_toBottomOf="@+id/detail_age"
            tools:text="M" />

        <TextView
            android:id="@+id/detail_emotion"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/blur_face"
            app:layout_constraintStart_toEndOf="@+id/individual_face"
            app:layout_constraintTop_toBottomOf="@+id/detail_gender"
            tools:text="Happy" />

        <ImageView
            android:id="@+id/detail_emoji"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/imageview"
            app:layout_constraintStart_toEndOf="@+id/detail_emotion"
            app:layout_constraintTop_toTopOf="@+id/detail_emotion"
            tools:srcCompat="@drawable/surprise" />

        <Button
            android:id="@+id/blur_face"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blur_this_face"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>